# purestomp

./: .gitmodules  CMakeLists.txt  README.md  main.c
.github/workflows/: linux.yaml  macos.yaml  windows.yaml
